@@ -2,6 +2,7 @@
 package org.hiero.otter.fixtures.logging.internal;
 
 import static com.swirlds.logging.legacy.LogMarker.DEMO_INFO;
+import static com.swirlds.logging.legacy.LogMarker.ERROR;
 import static com.swirlds.logging.legacy.LogMarker.EXCEPTION;
 import static com.swirlds.logging.legacy.LogMarker.FREEZE;
 import static com.swirlds.logging.legacy.LogMarker.INVALID_EVENT_ERROR;
@@ -22,6 +23,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.swirlds.logging.legacy.LogMarker;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
+import java.util.Collections;
+import java.util.EnumSet;
 import java.util.Set;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.ThreadContext;
@@ -42,8 +45,9 @@ import org.hiero.consensus.model.node.NodeId;
 public final class LogConfigHelper {
 
     /** Markers that are allowed in swirlds.log & console. */
-    private static final Set<LogMarker> ALLOWED_MARKERS = Set.of(
+    public static final Set<LogMarker> ALLOWED_MARKERS = Collections.unmodifiableSet(EnumSet.of(
             EXCEPTION,
+            ERROR,
             TESTING_EXCEPTIONS,
             SOCKET_EXCEPTIONS,
             INVALID_EVENT_ERROR,
@@ -55,14 +59,13 @@ public final class LogConfigHelper {
             STATE_TO_DISK,
             DEMO_INFO,
             TESTING_EXCEPTIONS_ACCEPTABLE_RECONNECT,
-            MERKLE_DB,
-            STATE_HASH);
+            MERKLE_DB));
 
     private static final Set<LogMarker> IGNORED_CONSOLE_MARKERS = Set.of(STARTUP, MERKLE_DB, VIRTUAL_MERKLE_STATS);
 
     /** Default pattern for text-based appenders. */
     public static final String DEFAULT_PATTERN =
-            "%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] }%notEmpty{[%marker] }%-5level %logger{36} - %msg %n";
+            "%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %notEmpty{[%marker] }%-5level %logger{36} - %msg %n";
 
     private static final ObjectMapper objectMapper = new ObjectMapper();
 
@@ -159,7 +162,7 @@ public final class LogConfigHelper {
      * @return a composite {@link ComponentBuilder} that suppresses unwanted markers
      */
     @NonNull
-    public static ComponentBuilder<?> creatIgnoreMarkerFilters(
+    public static ComponentBuilder<?> createIgnoreMarkerFilters(
             @NonNull final ConfigurationBuilder<BuiltConfiguration> builder) {
         final ComponentBuilder<?> ignoredMarkerFilters = builder.newComponent("Filters");
         for (final LogMarker marker : IGNORED_CONSOLE_MARKERS) {
